# Pe3D

./: .gitignore  MANIFEST.in  NOTICE.md  README.md  README_PYPI.md  pyproject.toml
.github/workflows/: publish.yml
G3point/: G3Point.m  defineparameters.m
G3point/PointCloud/: param.csv
G3point/Utils/: addtoStack.m  adjustnormals3d.m  anglerot2vecmat.m  clean_labels.m  cluster_labels.m  displayheader.m  disttoplanemultiscale.m  ellipsoidinertiasurf.m  ellipsoidorientation3d.m  exportgrains.m  exportgranulotoxls.m  fitellipsoidtograins.m  grainsizedistribution.m  gridbynumbersampling.m  loadptCloud.m  randsamplingellipsoid.m  segment_labels.m  vec2rot.m
archive/python_reference_v1/: README.md  baseline_metrics.json  pyproject.toml
archive/python_reference_v1/outputs/: Otira_1cm_grains.ply_granulo.csv
archive/python_reference_v1/src/g3point/: cli.py  config.py  math3d.py  pipeline.py  plotting.py
docs/: CODEBASE_DOCUMENTATION.md  RELEASE_PYPI.md  ROADMAP.md  STATUS_2026-03-12.md
evaluation/: README.md  evaluate_manual_instances.py  evaluate_manual_zones.py  generate_manual_instance_ternary_plots.py
evaluation/manual_instance_pca_default/: summary.json
evaluation/manual_instance_pca_split_adaptive_norec/: summary.json
evaluation/manual_instance_pca_split_recursive/: summary.json
evaluation/manual_instance_pca_split_restorecheck/: summary.json
evaluation/manual_instance_smrf_default/: summary.json
evaluation/manual_instance_smrf_h010_split/: summary.json
evaluation/manual_instance_smrf_h020_split/: summary.json
evaluation/manual_instance_smrf_split_default/: summary.json
evaluation/manual_instance_ternary_plots/: summary.json
evaluation/manual_instance_vs_block_current_default/: summary.json
evaluation/manual_instance_vs_block_current_default_v2/: summary.json
evaluation/manual_label_block_tuning/: README.md  (+1 more)
(+58 files in other folders)
