[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "g3point"
version = "0.1.0"
description = "Python CLI reimplementation of the G3Point MATLAB workflow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "scipy>=1.12",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "plyfile>=1.1",
  "openpyxl>=3.1",
]

[project.scripts]
g3point = "g3point.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

